# fintech

./: .env.example  .gitignore  CLAUDE.md  Makefile  api_tester.rest  api_tester.rest.example  pyproject.toml
_docker/: .dockerignore  Dockerfile.dev  docker-compose.dev.yml  entrypoint.dev.sh
_docs/: bash.md  conecpts.md  django.md  docker.md  env.md  flows.md  makefile.md  python.md  uv.md
account/: models.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_account_status.py  0003_transaction.py
authentication/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
core/: celery.py  urls.py
core/settings/: base.py  dev.py
customer/: domain.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
customer/management/commands/: delete_user.py
customer/migrations/: 0001_initial.py
notification/: adapters.py  channels.py  services.py  tasks.py  tests.py
